--- a/settings.yml
+++ b/settings.yml
@@ -90,11 +90,6 @@ topic_list_previewable_image_height_min:
   type: integer
   description:
     en: "Minimum height of image that can be previewed."
-topic_list_hotlink_thumbnails:
-  default: false
-  type: bool
-  description:
-    en: "Use topic image_url in thumbnails directly, rather than generated thumbnails. Warning: this means each full sized topic image will be loaded when the topic list loads and will affect performance and overrides user pref."
 topic_list_thumbnail_first_x_rows:
   default: 0
   type: integer
@@ -104,7 +99,7 @@ topic_list_featured_images:
   default: false
   type: bool
   description:
-    en: "Enable featured images for non-category routes."
+    en: "PLACEHOLDER, FEATURED IMAGES DOESN'T PRESENTLY WORK Enable featured images for non-category routes."
 topic_list_featured_images_full_res:
   default: false
   type: bool
