--- a/settings.yml
+++ b/settings.yml
@@ -70,16 +70,11 @@ topic_list_default_thumbnail_fallback:
   type: bool
   description:
     en:  "Use the default thumbnail when a topic has no previewed image."
-topic_list_thumbnail_width:
-  default: 100
+topic_list_thumbnail_resolution_level:
+  default: 0
   type: integer
   description:
-    en:  "Width of topic preview thumbnail."
-topic_list_thumbnail_height:
-  default: 100
-  type: integer
-  description:
-    en: "Height of topic preview thumbnail. (Setting this to 0 will cause TLP to seek the resolution from thumbnail width whilst maintaining the original image's aspect ratio - especially important for tiles view)"
+    en:  "Resolution level of thumbnail used: 0 is original, 1 is up to 800x800 , 2 is up to 400x400, 3 is up to 200x200, 4 is up to 100x100"
 topic_list_previewable_image_width_min:
   default: 100
   type: integer
@@ -104,17 +99,17 @@ topic_list_featured_images_full_res:
   default: false
   type: bool
   description:
-    en: "Force featured images to use full size original images (use with caution wrt user bandwidth as ignores user pref)"
+    en: "PLACEHOLDER, FEATURED IMAGES DOESN'T PRESENTLY WORK Force featured images to use full size original images (use with caution wrt user bandwidth as ignores user pref)"
 topic_list_featured_images_category:
   default: false
   type: bool
   description:
-    en: "Apply featured images site setting to all categories."
+    en: "PLACEHOLDER, FEATURED IMAGES DOESN'T PRESENTLY WORK Apply featured images site setting to all categories."
 topic_list_featured_images_topic:
   default: false
   type: bool
   description:
-    en: "Show featured images above topics."
+    en: "PLACEHOLDER, FEATURED IMAGES DOESN'T PRESENTLY WORK Show featured images above topics."
 topic_list_featured_images_tag:
   type: list
   default: ''
@@ -124,34 +119,34 @@ topic_list_featured_images_tag_show:
   default: true
   type: bool
   description:
-    en: "Show featured images tag below featured images."
+    en: "PLACEHOLDER, FEATURED IMAGES DOESN'T PRESENTLY WORK Show featured images tag below featured images."
 topic_list_featured_images_count:
   default: 4
   description:
-    en: "Featured images count."
+    en: "PLACEHOLDER, FEATURED IMAGES DOESN'T PRESENTLY WORK Featured images count."
 topic_list_featured_width:
   default: 100
   description:
-    en: "Featured image width.  Setting this to zero will make it responsive to image aspect ratio."
+    en: "PLACEHOLDER, FEATURED IMAGES DOESN'T PRESENTLY WORK Featured image width.  Setting this to zero will make it responsive to image aspect ratio."
 topic_list_featured_height:
   default: 100
   description:
-    en: "Featured image height."
+    en: "PLACEHOLDER, FEATURED IMAGES DOESN'T PRESENTLY WORK Featured image height."
 topic_list_featured_title:
   default: ''
   type: string
   description:
-    en: "Featured images title. Supports Markdown."
+    en: "PLACEHOLDER, FEATURED IMAGES DOESN'T PRESENTLY WORK Featured images title. Supports Markdown."
 topic_list_featured_excerpt:
   default: true
   type: bool
   description:
-    en: "Include topic excerpt in featured image."
+    en: "PLACEHOLDER, FEATURED IMAGES DOESN'T PRESENTLY WORK Include topic excerpt in featured image."
 topic_list_featured_order:
   default: 'tag'
   type: 'enum'
   description:
-    en: "Order featured images by when topic was created, or featured tag was applied."
+    en: "PLACEHOLDER, FEATURED IMAGES DOESN'T PRESENTLY WORK Order featured images by when topic was created, or featured tag was applied."
   choices:
     - tag
     - topic
