--- a/settings.yml
+++ b/settings.yml
@@ -83,16 +83,14 @@ topic_list_thumbnail_resolution_level:
   type: integer
   description:
     en:  "Resolution level of thumbnail used: 0 is original, 1 is up to 800x800 , 2 is up to 400x400, 3 is up to 200x200, 4 is up to 100x100"
-topic_list_previewable_image_width_min:
+topic_list_thumbnail_width:
   default: 100
-  type: integer
   description:
-    en: "Minimum width of image that can be previewed."
-topic_list_previewable_image_height_min:
+    en: "Width of image that can be previewed."
+topic_list_thumbnail_height:
   default: 100
-  type: integer
   description:
-    en: "Minimum height of image that can be previewed."
+    en: "Height of image that can be previewed."
 topic_list_thumbnail_first_x_rows:
   default: 0
   type: integer
@@ -122,15 +120,17 @@ topic_list_featured_images_tag_show:
 topic_list_featured_images_count:
   default: 4
   description:
-    en: "Featured images count."
+    en: "Featured Images Topics set count. NB If featured Topics don't contain a thumbnail the number of images will be fewer, just raise the number."
 topic_list_featured_width:
-  default: 100
+  default: 0
+  type: integer
   description:
-    en: "PLACEHOLDER, DOESN'T PRESENTLY WORK Featured image width.  Setting this to zero will make it responsive to image aspect ratio."
+    en: "Featured image width.  Setting this to zero will make it responsive to image aspect ratio."
 topic_list_featured_height:
-  default: 100
+  default: 150
+  type: integer
   description:
-    en: "PLACEHOLDER, DOESN'T PRESENTLY WORK Featured image height."
+    en: "Featured image height."
 topic_list_featured_title:
   default: ''
   type: string
