--- a/settings.yml
+++ b/settings.yml
@@ -71,7 +71,7 @@ topic_list_default_thumbnail:
     en:  "Image URL for default thumbnail if topic thumbnail is inaccessible."
 topic_list_default_thumbnail_fallback:
   default: false
-  type: string
+  type: bool
   description:
     en:  "Use the default thumbnail when a topic has no previewed image."
 topic_list_thumbnail_resolution_level:
@@ -80,7 +80,7 @@ topic_list_thumbnail_resolution_level:
   description:
     en:  "Resolution level of thumbnail used: 0 is original, 1 is up to 800x800 , 2 is up to 400x400, 3 is up to 200x200, 4 is up to 100x100"
 topic_list_thumbnail_width:
-  default: 100
+  default: 150
   description:
     en: "Width of image that can be previewed."
 topic_list_thumbnail_height:
