FEATURE: offer independent Featured Images resolution level

--- a/settings.yml
+++ b/settings.yml
@@ -78,7 +78,7 @@ topic_list_thumbnail_resolution_level:
   default: 2
   type: integer
   description:
-    en:  "Resolution level of thumbnail used: 0 is original, 1 is up to 800x800 , 2 is up to 400x400, 3 is up to 200x200, 4 is up to 100x100"
+    en:  "Resolution level of thumbnail used: 0 is original, 1 is up to 800x800 , 2 is up to 400x400, 3 is up to 200x200, 4 is up to 100x100, 5 is up to 50x50"
 topic_list_thumbnail_width:
   default: 150
   description:
@@ -97,6 +97,11 @@ topic_list_featured_images:
   type: bool
   description:
     en: "Enable featured images for non-category routes."
+topic_list_featured_images_resolution_level:
+  default: 2
+  type: integer
+  description:
+    en:  "Resolution level of thumbnail used in Featured Images: 0 is original, 1 is up to 800x800 , 2 is up to 400x400, 3 is up to 200x200, 4 is up to 100x100, 5 is up to 50x50"
 topic_list_featured_images_category:
   default: false
   type: bool
