--- a/settings.yml
+++ b/settings.yml
@@ -92,9 +92,11 @@ topic_list_default_thumbnail_fallback:
     en:  "Use the default thumbnail when a topic has no previewed image."
 topic_list_thumbnail_resolution_level:
   default: 2
+  max: 6
+  min: 0
   type: integer
   description:
-    en:  "Resolution level of thumbnail used in the Topic List: 0 is original, 1 is next highest, up to 5 lowest. Actual resolution will depend on number of thumbnails available for any one image. Experiment for best setting for your site, but 2 is recommended for Tiles"
+    en:  "Resolution level of thumbnail used in the Topic List: 0 is original, 1 is next highest, up to 6 lowest. Actual resolution will depend on number of thumbnails available for any one image. Experiment for best setting for your site, but 2 is recommended for Tiles"
 topic_list_thumbnail_width:
   default: 150
   description:
@@ -115,9 +117,11 @@ topic_list_featured_images:
     en: "Enable featured images for non-category routes."
 topic_list_featured_images_resolution_level:
   default: 2
+  max: 6
+  min: 0
   type: integer
   description:
-    en:  "Resolution level of thumbnail used in Featured Images: 0 is original, 1 is next highest, up to 5 lowest. Actual resolution will depend on number of thumbnails available for any one image.  Experiment for best setting for your site."
+    en:  "Resolution level of thumbnail used in Featured Images: 0 is original, 1 is next highest, up to 6 lowest. Actual resolution will depend on number of thumbnails available for any one image. Experiment for best setting for your site."
 topic_list_featured_images_category:
   default: false
   type: bool
