fix mobile, non-tiles view

--- a/settings.yml
+++ b/settings.yml
@@ -129,6 +129,14 @@ topic_list_thumbnail_height:
   default: 100
   description:
     en: "Height of image that can be previewed."
+topic_list_thumbnail_width_mobile:
+  default: 150
+  description:
+    en: "Width of image that can be previewed on mobile."
+topic_list_thumbnail_height_mobile:
+  default: 100
+  description:
+    en: "Height of image that can be previewed on mobile."
 topic_list_thumbnail_first_x_rows:
   default: 0
   type: integer
